--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,46 @@
- body {
-    background-color: #d4a276; /* backgroud-color é a propriedade da cor do plano de fundo */
-    color: #000; /* color é a propriedade da cor do texto */
- }  
-h2 {
-    color: #444;
-    font-size: 46px;
-    text-decoration: italic;
-        }
-.font-20px {
-    font-size: 40px;
+:root {
+    --cor-preto: #191516;
+    --cor-branco: #ffffff;
+    --cor-vinho: #A60067;
+    --cor-azul-duvidoso: #6153CC;
+    --cor-azul-clarin: #e5f4e3;
 }
+
+body {
+    background-color: var(--cor-preto);
+    color: var(--cor-branco);
+}
+
+/*
+.item-menu {
+    color: var(--cor-vinho);
+}
+*/
+
+/*
+    :link
+    :active
+    :visited
+    :hover
+*/
+header nav a.item-menu {
+    color: var(--cor-branco);
+    text-decoration: none;
+    border: var(--cor-branco) 1px solid;
+    padding: 5px 10px;
+}
+
+header nav a.item-menu:hover {
+    background-color: var(--cor-branco);
+    color: var(--cor-preto);
+}
+
+header nav a.item-menu.item-ativo {
+    background-color: var(--cor-branco);
+    color: var(--cor-preto);
+}
+
+section {
+    min-height: 500px;
+}
+
